# Assessly

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  start.bat  start.ps1  vercel.json
backend/: main.py  requirements.txt
src/: api.py  backend.py  export_pdf.py  frontend.py  main.py
