[project]
name = "pdf2quiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "openai>=2.1.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20250506",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
